# ulang

./: .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
core/: __init__.py  ast.py  lexer.py  parser.py  symbol_table_manager.py
core/tokens/: arthmetic.py  boolean.py  literal.py  logic.py
tests/: __init__.py  test_evaluate.py  test_tokenizer.py
